# webscraping

./: .gitignore  README.md  main.py  processor.py  pyproject.toml  scraper.py
knowledge_base/: biasharaplus.com_knowledge_base_20260203_151023.json  biasharaplus.com_summary_20260203_151023.txt  help.biasharaplus.com_knowledge_base_20260203_151220.json  help.biasharaplus.com_summary_20260203_151220.txt
